# Agent-Team-OnDemand

./: .gitignore  README.md  agenteia_expert_codex_spec.md
agenteia-expert/: .env.example  .env.native.example  .gitattributes  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
agenteia-expert/app/: __init__.py  main.py
agenteia-expert/app/agents/: __init__.py  agenteia_expert.py  base_agent.py  desarrollador_fullstack.py  devops_arquitecto.py  scrum_master_pm.py
agenteia-expert/app/api/: __init__.py  agents.py  chat.py  deps.py  group_chat.py  health.py  meetings.py  tasks.py  teams.py
agenteia-expert/app/core/: config.py  exceptions.py  logging.py  security.py
agenteia-expert/app/db/: __init__.py  base.py  session.py
agenteia-expert/app/models/: __init__.py  agent.py  meeting.py  message.py  task.py  team.py  tool.py  workspace.py
agenteia-expert/app/prompts/: agenteia_expert.md  desarrollador_fullstack.md  (+3 more)
agenteia-expert/deploy/: DEPLOY.md  portal_proxy.py
agenteia-expert/frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
agenteia-expert/k8s/: api.yaml  portal.yaml
agenteia-expert/scripts/: create_telegram_webhook.sh  deploy-native.sh  deploy-remote.sh  deploy-team.sh  jenkins-deploy.sh  setup-nginx-team.sh  setup_ubuntu.sh
agenteia-expert/tests/: test_agent_factory.py  test_chat.py  test_group_chat.py  test_health.py  test_scrum_meeting.py  test_telegram_adapter.py  test_workspace_service.py
(+117 files in other folders)
