[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenteia-expert"
version = "0.1.0"
description = "Control plane for a managed Hermes agent team"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "alembic>=1.14,<2",
  "aiosqlite>=0.20,<1",
  "apscheduler>=3.11,<4",
  "asyncpg>=0.30,<1",
  "fastapi>=0.128,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "python-telegram-bot>=22,<23",
  "redis>=5,<7",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "structlog>=24,<26",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8,<10",
  "pytest-asyncio>=0.25,<2",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = [
  "prompts/*.md",
  "db/migrations/*.mako",
  "db/migrations/versions/*.py",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"app/db/migrations/versions/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true
